# hypremoji

./: Cargo.toml  PKGBUILD  README.es.md  README.md  hypremoji.install
src/: actions.rs  cli.rs  main.rs
src/config/: mod.rs  paste_config.rs
src/ui/: build_main.rs  generic_btn.rs  mod.rs  pin_btn.rs  save_window_state_btn.rs  toast.rs  top_bar.rs
src/utils/: clipboard_manager.rs  get_client.rs  load_styles.rs  mod.rs  pin_at_cursor.rs  pin_at_point.rs  reset_config.rs
