[package]
name = "hypremoji"
version = "1.1.4"
edition = "2021"

[dependencies]
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0.0", features = ["serde"] }
dirs = "6.0.0"
chrono = "0.4.41"
clap = {version = "4.5.50" , features = ["derive"] }
